# altk

./: .gitignore  CHANGELOG.md  DEVLOG.md  LICENSE  README.md  pyproject.toml
scripts/: generate_synthetic_test_data.py
src/altk/: __init__.py  dichroism.py  furnace.py  mpms.py  scmag.py
src/altk/chemcalc/: __init__.py  calculation.py  chemcalc.py  reaction.py  species.py
src/altk/mpms/: __init__.py  cwfit.py  data.py  readdata.py
src/altk/pxrd/: __init__.py  readdata.py
src/altk/typing/: image.py  path.py
src/altk/utils/: _exceptions.py  image_display.py  logging.py  path_resolve.py
src/altk/workflows/: dichroism.py
src/commontoolkit/: __init__.py
src/commontoolkit/mpms/: __init__.py  readdata.py
tests/chemcalc/: test_calculation.py  test_reaction.py  test_species.py
tests/data/: sample_pxrd_ras_data_file.ras
tests/data/furnace/: sample_furnace_program.csv  sequence_left_furnace.csv  sequence_right_furnace.csv
tests/mpms/: test_cwfit.py  test_mpmsdata.py  test_sample.py
tests/scmag/: test_scmagdata.py
