[project]
name = "commontoolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LiGuang", email = "guangli25@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/commontoolkit"]
