[project]
name = "ALTK"
version = "0.2.0"
description = "Personal Analysis & Lab Toolkit, ALTK."
readme = "README.md"
authors = [
    { name = "LiGuang", email = "guangli25@outlook.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "chempy>=0.10.1",
    "matplotlib>=3.10.7",
    "mplfonts>=0.0.10",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "periodictable>=2.1.0",
    "scipy>=1.16.3",
    "tifffile>=2026.5.15",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/altk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
